# hackathon_unaite

./: .gitignore  README.md  main.py  manager.py  parse_readme.py  pyproject.toml  requirements.txt  server.py
agents/install_repo/: install_repo_agent.py  shell_tools.py
agents/readme_parser/: parser_agent.py
agents/web_scraping/: WebScraperAgent.py  example.py
agents/web_scraping/utils/: constants.py  helpers.py  types.py
templates/: index.html  paper_list.html
