[project]
name = "git-hunter"
version = "0.1.0"
description = "Discover, compare, and install AI research repositories with ease"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.13",
    "gitingest>=0.1.4",
    "jinja2>=3.1.6",
    "litellm>=1.72.6",
    "python-multipart>=0.0.20",
    "smolagents>=1.18.0",
    "uvicorn>=0.34.3",
]
